--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
           </svg>
         </div>
       </div>
-      <div class="Loding">Loding . . .</div>
+      <div class="Loding">Loding</div>
       <div id="information">
         <div class="NameCity">Weather in <span id="CiteName">City</span></div>
         <div class="Drgee"><span id="NumberDrgee">4</span> ℃</div>
         <div class="wetherInformation">
           <div>
-            <span>status : </span><span>Sunny</span>
+            <span>status : </span><span id="status">Sunny</span>
           </div>
           <div>Humidity : <span id="Humidity">26</span>%</div>
-          <div>wind speed : <span id="windSpeed"></span>32 km/h</div>
+          <div>wind speed : <span id="windSpeed">32</span> km/h</div>
         </div>
       </div>
     </div>
